# dataflow-pubsub-to-bq-examples-py

./: .gitignore  AGENTS.md  README.md  publish_to_schema_topic.py  pyproject.toml  run_dataflow.sh  run_dataflow_json.sh  run_dataflow_json_java.sh  run_dataflow_schema_driven.sh  run_mirror_publisher.sh
dataflow_pubsub_to_bq/: __init__.py  pipeline.py  pipeline_json.py  pipeline_options.py  pipeline_publisher.py  pipeline_publisher_options.py  pipeline_schema_driven.py  pipeline_schema_driven_options.py
dataflow_pubsub_to_bq/transforms/: __init__.py  json_to_tablerow.py  raw_json.py  schema_driven_to_tablerow.py  synthetic_messages.py
docs/: perf_test_results_round1.md  perf_test_results_round2.md  perf_test_results_round3.md  perf_test_results_round4.md  perf_test_results_round5.md  performance_scaling_strategy.md  schema_evolution_plan.md
java/: pom.xml
java/src/main/java/com/johanesalxd/: PubSubToBigQueryAvro.java  PubSubToBigQueryAvroOptions.java  PubSubToBigQueryJson.java  PubSubToBigQueryOptions.java
java/src/main/java/com/johanesalxd/schemas/: DeadLetterBigQuerySchema.java  RawJsonBigQuerySchema.java  TaxiRideBigQuerySchema.java
schemas/: generate_bq_schema.py  taxi_ride_v1.avsc
scripts/: cleanup_perf_test.sh  cleanup_schema_driven.sh  run_mirror_publisher.sh  run_perf_test.sh  run_schema_evolution.sh  synthetic_publisher.py
tests/: test_avro_publisher.py  test_json_to_tablerow.py  test_pipeline_publisher.py  test_raw_json.py  test_schema_driven_to_tablerow.py  test_synthetic_publisher.py
(+4 files in other folders)
