[project]
name = "dataflow-pubsub-to-bq-pipeline"
version = "1.0.0"
description = "Pub/Sub to BigQuery streaming pipeline using Apache Beam"
requires-python = ">=3.12"
dependencies = [
    "apache-beam[gcp]==2.70.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataflow_pubsub_to_bq"]

[tool.uv]
dev-dependencies = []
