[project]
name = "dataflow-pubsub-to-bq-pipeline"
version = "1.0.0"
description = "Pub/Sub to BigQuery streaming pipeline using Apache Beam"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-beam[gcp]==2.70.0",
    "fastavro>=1.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataflow_pubsub_to_bq"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
